--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,20 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>SecondApp</title>
-  <base href="/">
+    <meta charset="utf-8">
+    <title>SecondApp</title>
+    <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+          integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+          crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root>Loading...</app-root>
-</body>
-</html>
+<div class="container-fluid">
+    <jo-rep-admin>Loading...</jo-rep-admin>
+</div>
+
